tests/errors/module_summon_errors.out
Error in tests/errors/module_summon_errors.sad:
[E8001] Traceback (most recent call last):
  File tests/errors/module_summon_errors.sad, line 1, in <program>
    summon totally_nonexistent_module
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ModuleError: Module 'totally_nonexistent_module' not found. Searched:
  tests/errors/totally_nonexistent_module.sad
  tests/errors/totally_nonexistent_module.sard
  sards/stdlib/totally_nonexistent_module.sad
  sards/stdlib/totally_nonexistent_module.sard
